--- a/pug/index.pug
+++ b/pug/index.pug
@@ -9,5 +9,36 @@ head
     header 
         .container 
             .row
-                img(src="public/images/LOGO1.png", alt="")
+                a(href="index.html" )
+                    img.logo(src="public/images/LOGO1.png", alt="") 
                 h1 真豪科技
+                nav 
+                    ul 
+                        li
+                            a(href="#") 關於我們
+                        li
+                            a(href="#") 產品介紹
+                        li
+                            a(href="#") 客戶回饋
+                        li
+                            a(href="#") 常見問題
+    .banner 
+        img.img_fluid(src="public/images/product4.png", alt="")
+    .container.S1
+        h2 最新消息
+        ul.newspost 
+            li 
+                .date1 2022-06-10
+                .product1 產品資訊
+                .news1 裝修好幫手-壓力板手即將推出,各位師傅們不要錯過喔!
+            li 
+                .date2 2022-05-23
+                .product2 系統公告
+                .news2 6/1網站將進行維護,不便之處敬請原諒
+            li 
+                .date3 2022-05-10
+                .product3 產品資訊
+                .news3 四方吹清洗槽即將上市,請各為多多關注官方資訊!
+        img.logo2(src="public/images/LOGO2.png", alt="")
+    .container.S2 
+        img.img-fluid(src="public/images/product1.png", alt="")
