--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,10 @@
-h1, h2, ul, dd {
+h1, h2, ul, dd, a {
   margin: 0;
   padding: 0;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 ul {
@@ -13,8 +17,8 @@ a {
 
 .container {
   margin: auto;
-  width: 80%;
-  max-width: 1140px;
+  width: 90%;
+  max-width: 1280px;
 }
 
 body {
@@ -38,43 +42,50 @@ body {
   flex-wrap: wrap;
 }
 
+.row-display-nowrap {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
 .logo {
-  width: 80%;
+  width: 200px;
+  padding-top: 10px;
 }
 
 header > .container h1 {
-  padding-top: 80px;
+  padding-top: 60px;
   letter-spacing: 10px;
+  padding-right: 20px;
 }
 
-header > .container > .row > nav > ul {
+header > .container > .row-display-nowrap > nav {
+  width: 800px;
+  padding-left: 100px;
+  padding-top: 90px;
+}
+
+header > .container > .row-display-nowrap > nav > ul {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-around;
 }
 
-header > .container > .row > nav {
-  width: 100%;
-  margin-bottom: 10px;
-}
-
-header > .container > .row > nav a {
+header > .container > .row-display-nowrap > nav a {
   color: black;
   display: block;
   padding: 20px;
   font-size: 1.3em;
   text-align: center;
   letter-spacing: 2px;
-  box-sizing: border-box;
   border-right: 1px solid gray;
 }
 
-header > .container > .row > nav a:last-child {
+header > .container > .row-display-nowrap > nav a:last-child {
   border-right: none;
 }
 
-.banner {
-  width: auto;
+.banner > img {
   text-align: center;
+  margin-top: 20px;
 }
 
 .S1 {
@@ -94,28 +105,98 @@ header > .container > .row > nav a:last-child {
 }
 
 .newspost > li {
+  display: block;
   margin-top: 20px;
   margin-left: 100px;
   width: 80%;
   border-bottom: 1px solid #2A66AC;
-  display: flex;
-  justify-content: space-around;
+}
+
+.newspost > li > .date {
+  float: left;
+  padding-right: 70px;
+  padding-left: 100px;
+}
+
+.newspost > li > .product1 {
+  float: left;
+  margin-right: 80px;
+  background-color: #70A8EA;
+  color: #fff;
+  padding: 3px;
+  border-radius: 8px;
 }
 
 .newspost > li > .product2 {
-  padding-right: 120px;
-}
-
-.newspost > li > .date3 {
-  padding-right: 50px;
-}
-
-.newspost > li > .product3 {
-  padding-right: 100px;
+  float: left;
+  margin-right: 80px;
+  background-color: #207EEB;
+  color: #fff;
+  padding: 3px;
+  border-radius: 8px;
 }
 
 .logo2 {
   position: absolute;
   right: 0px;
-  bottom: -20px;
+  bottom: -70px;
+  opacity: 0.5;
+  width: 20%;
+}
+
+.S2 {
+  background-color: #E8FAFF;
+  z-index: -1;
+}
+
+.S2 > .left {
+  width: 50%;
+  position: relative;
+}
+
+.S2 > .left > img {
+  width: 400px;
+  padding-left: 100px;
+  padding-top: 20px;
+  z-index: 1;
+}
+
+.S2 > .right {
+  width: 50%;
+}
+
+.S2 > .right > h2 {
+  padding-top: 70px;
+  padding-bottom: 30px;
+  padding-left: 50px;
+}
+
+.S2 > .right > p {
+  padding-left: 50px;
+  font-weight: 800;
+}
+
+.icon-circul-blue {
+  width: 50px;
+  position: absolute;
+  border-radius: 100%;
+  border: 1px solid #CDF4FF;
+  background-color: #CDF4FF;
+  padding: 70px;
+  bottom: -10px;
+  left: 90px;
+  z-index: 0;
+}
+
+.S3 {
+  background-color: #CDF4FF;
+}
+
+.S3 > .left {
+  width: 50%;
+}
+
+.S3 > .right {
+  width: 50%;
+  order: -1;
 }
