--- a/pug/index.pug
+++ b/pug/index.pug
@@ -8,9 +8,9 @@ head
   body 
     header 
         .container 
-            .row
+            .row-display-nowrap
                 a(href="index.html" )
-                    img.logo(src="public/images/LOGO1.png", alt="") 
+                    img.logo.img-fluid(src="public/images/LOGO1.png", alt="") 
                 h1 真豪科技
                 nav 
                     ul 
@@ -23,22 +23,38 @@ head
                         li
                             a(href="#") 常見問題
     .banner 
-        img.img_fluid(src="public/images/product4.png", alt="")
+        img.img_fluid(src="public/images/product7.png", alt="")
     .container.S1
         h2 最新消息
         ul.newspost 
             li 
-                .date1 2022-06-10
+                .date 2022-06-10
                 .product1 產品資訊
-                .news1 裝修好幫手-壓力板手即將推出,各位師傅們不要錯過喔!
+                .news 裝修好幫手-壓力板手即將推出,各位師傅們不要錯過喔!
             li 
-                .date2 2022-05-23
+                .date 2022-05-23
                 .product2 系統公告
-                .news2 6/1網站將進行維護,不便之處敬請原諒
+                .news 6/1網站將進行維護,不便之處敬請原諒
             li 
-                .date3 2022-05-10
-                .product3 產品資訊
-                .news3 四方吹清洗槽即將上市,請各為多多關注官方資訊!
+                .date 2022-05-10
+                .product1 產品資訊
+                .news 四方吹清洗槽即將上市,請各為多多關注官方資訊!
         img.logo2(src="public/images/LOGO2.png", alt="")
-    .container.S2 
-        img.img-fluid(src="public/images/product1.png", alt="")
+    .container.S2.row
+        .left
+            img(src="public/images/product1.png", alt="")
+            span.icon-circul-blue 
+        .right 
+            h2 真豪洗冷氣清洗槽
+            p 革命性產品
+            p 完全解決溢水的困擾
+            p 組裝快速省去繁雜工時
+    .container.S3.row  
+        .left 
+            img(src="public/images/knife.png", alt="")
+        .right 
+            h2 真豪修邊刀
+            p 方便攜帶
+            p 好操作
+            p 耐用
+            p 刀頭更換快速
