--- a/pug/index.pug
+++ b/pug/index.pug
@@ -52,9 +52,14 @@ head
     .container.S3.row  
         .left 
             img(src="public/images/knife.png", alt="")
+            img.logo2(src="public/images/LOGO2.png", alt="")
         .right 
             h2 真豪修邊刀
             p 方便攜帶
             p 好操作
             p 耐用
             p 刀頭更換快速
+    footer 
+        .container 
+            .row 
+                
