--- a/pug/index.pug
+++ b/pug/index.pug
@@ -22,7 +22,7 @@ head
                         li
                             a(href="#") 常見問題
     .banner 
-        img.img_fluid(src="public/images/product7.png", alt="")
+        img.img-fluid(src="public/images/product7.png", alt="")
     .container.S1
         h2 最新消息
         ul.newspost 
@@ -41,8 +41,7 @@ head
         img.logo2(src="public/images/LOGO2.png", alt="")
     .container.S2.row
         .left
-            img(src="public/images/product5.png", alt="")
-            span.icon-circul-blue 
+            img.img-fluid(src="public/images/product6.png", alt="") 
         .right 
             h2 真豪洗冷氣清洗槽
             p 革命性產品
@@ -50,7 +49,7 @@ head
             p 組裝快速省去繁雜工時
     .container.S3.row  
         .left 
-            img(src="public/images/knife.png", alt="")
+            img.img-fluid(src="public/images/knife2.png", alt="")
             img.logo2(src="public/images/LOGO2.png", alt="")
         .right 
             h2 真豪修邊刀
