--- a/pug/index.pug
+++ b/pug/index.pug
@@ -33,11 +33,11 @@ head
             li 
                 .date 2022-05-23
                 .product2 系統公告
-                .news 6/1網站將進行維護,不便之處敬請原諒
+                .news 6/1網站將進行維護,不便之處敬請見諒
             li 
                 .date 2022-05-10
                 .product1 產品資訊
-                .news 四方吹清洗槽即將上市,請各為多多關注官方資訊!
+                .news 四方吹清洗槽即將上市,請各位多多關注官方資訊!
         img.logo2(src="public/images/LOGO2.png", alt="")
     .container.S2.row
         .left
@@ -60,4 +60,16 @@ head
     footer 
         .container 
             .row 
-
+                div.floor1
+                    img(src="public/images/icon-phone.png", alt="")
+                    p (04)7321533
+                div.floor1    
+                    img(src="public/images/icon-tfx.png", alt="")
+                    p (04)7321101
+                div.floor2              
+                    img(src="public/images/icon-mail.png", alt="")
+                    p hongcheng@easywash.com
+                div.floor2
+                    img(src="public/images/icon-line.png", alt="")
+                    p ID:01469740
+            p copyright
