--- a/public/css/style.css
+++ b/public/css/style.css
@@ -212,6 +212,10 @@ footer {
   padding: 40px 40px 0 40px;
 }
 
+footer > .container > .row {
+  width: 60%;
+}
+
 footer > .container > p {
   text-align: center;
 }
