--- a/pug/index.pug
+++ b/pug/index.pug
@@ -49,7 +49,7 @@ head
             p 組裝快速省去繁雜工時
     .container.S3.row  
         .left 
-            img.img-fluid(src="public/images/knife2.png", alt="")
+            img(src="public/images/knife2.png", alt="")
             img.logo2(src="public/images/LOGO2.png", alt="")
         .right 
             h2 真豪修邊刀
