--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -206,6 +206,7 @@ footer>.container>.row>.floor1{
 footer>.container>.row>.floor1>img{
     float: left;
     padding-left: 50px;
+    padding-right: 25px;
 }
 footer>.container>.row>.floor2{
     width: 50%;
@@ -214,6 +215,7 @@ footer>.container>.row>.floor2{
 footer>.container>.row>.floor2>img{
     float: left;
     padding-left: 50px;
+    padding-right: 25px;
 }
 footer>.container>.row>div>p{
     color: #fff;
