--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -38,13 +38,14 @@ body{
 .row-display-nowrap{
     display: flex;
     flex-wrap: nowrap;
+    justify-content: space-between;
 }
 //===============================================================
 //=================頁首==========================================
 //================================================================
 
 .logo{
-    width:300px;
+    width:250px;
     padding-top: 10px;
 }
 header>.container>.row-display-nowrap>nav{
@@ -59,12 +60,15 @@ header>.container>.row-display-nowrap>nav>ul{
 header>.container>.row-display-nowrap>nav a{
     color:black;
     display: block;
-    margin-left: 50px;
+    margin-left: 20px;
     padding-right: 20px;
     font-size: 1.3em;
     text-align: center;
     letter-spacing: 2px;
     border-right: 1px solid gray;
+}
+header>.container>.row-display-nowrap>nav li:last-child a{
+    border: none;
 }
 //===============================================================================
 //=====================================大圖======================================
@@ -79,9 +83,11 @@ header>.container>.row-display-nowrap>nav a{
 .S1{
     background-color: #CDF4FF;
     height: 350px;
+}
+.S1>.container{
     position: relative;
 }
-.S1>h2{
+.S1>.container>h2{
     padding-top: 50px;
     padding-left: 100px;
     font-size: 1.8em;
@@ -118,39 +124,39 @@ header>.container>.row-display-nowrap>nav a{
     padding: 3px;
     border-radius: 8px;
 }
-//========================================================================================
-//====================================主打商品=============================================
-//=========================================================================================
-.S1>.logo2{
+.S1>.container>.logo2{
     position: absolute;
     right: 0px;
-    bottom: -70px;
+    bottom: -200px;
     opacity: 0.5;
     width: 20%;
 }
+//========================================================================================
+//====================================主打商品=============================================
+//=========================================================================================
 .S2{
     background-color: #E8FAFF;
     padding-top: 20px;
     padding-bottom: 20px;
-    z-index: -1;
 }
-.S2>.left{
+.S2>.container>.left{
     width: 50%;
     position: relative;
 }
-.S2>.left>img{
-    padding-left: 100px;
+.S2>.container>.left>img{
+    padding-left: 10px;
     padding-top: 20px;
+    max-width: 400px;
 }
-.S2>.right{
+.S2>.container>.right{
     width: 50%;
 }
-.S2>.right>h2{
+.S2>.container>.right>h2{
     padding-top: 70px;
     padding-bottom: 30px;
     padding-left: 50px;
 }
-.S2>.right>p{
+.S2>.container>.right>p{
     padding-left: 50px;
     font-weight: 800;
 }
@@ -158,28 +164,29 @@ header>.container>.row-display-nowrap>nav a{
     background-color: #CDF4FF;
     padding-top: 20px;
 }
-.S3>.left{
+.S3>.container>.left{
     width: 50%;
     position: relative;
 }
-.S3>.left>img{
+.S3>.container>.left>img{
     padding-left: 50px;
     padding-top: 20px;
+    max-width: 300px;
 }
-.S3>.right{
+.S3>.container>.right{
     width: 50%;
     order: -1;
 }
-.S3>.right>h2{
+.S3>.container>.right>h2{
     padding-left: 150px;
     padding-top: 40px;
     padding-bottom: 20px;
 }
-.S3>.right>p{
+.S3>.container>.right>p{
     padding-left: 150px;
     font-weight: 800;
 }
-.S3>.left>.logo2{
+.S3>.container>.left>.logo2{
     position: absolute;
     right: 0px;
     bottom: -80px;
