--- a/pug/index.pug
+++ b/pug/index.pug
@@ -23,40 +23,43 @@ head
                             a(href="#") 常見問題
     .banner 
         img.img-fluid(src="public/images/product7.png", alt="")
-    .container.S1
-        h2 最新消息
-        ul.newspost 
-            li 
-                .date 2022-06-10
-                .product1 產品資訊
-                .news 裝修好幫手-壓力板手即將推出,各位師傅們不要錯過喔!
-            li 
-                .date 2022-05-23
-                .product2 系統公告
-                .news 6/1網站將進行維護,不便之處敬請見諒
-            li 
-                .date 2022-05-10
-                .product1 產品資訊
-                .news 四方吹清洗槽即將上市,請各位多多關注官方資訊!
-        img.logo2(src="public/images/LOGO2.png", alt="")
-    .container.S2.row
-        .left
-            img.img-fluid(src="public/images/product6.png", alt="") 
-        .right 
-            h2 真豪洗冷氣清洗槽
-            p 革命性產品
-            p 完全解決溢水的困擾
-            p 組裝快速省去繁雜工時
-    .container.S3.row  
-        .left 
-            img(src="public/images/knife2.png", alt="")
+    .S1
+        .container
+            h2 最新消息
+            ul.newspost 
+                li 
+                    .date 2022-06-10
+                    .product1 產品資訊
+                    .news 裝修好幫手-壓力板手即將推出,各位師傅們不要錯過喔!
+                li 
+                    .date 2022-05-23
+                    .product2 系統公告
+                    .news 6/1網站將進行維護,不便之處敬請見諒
+                li 
+                    .date 2022-05-10
+                    .product1 產品資訊
+                    .news 四方吹清洗槽即將上市,請各位多多關注官方資訊!
             img.logo2(src="public/images/LOGO2.png", alt="")
-        .right 
-            h2 真豪修邊刀
-            p 方便攜帶
-            p 好操作
-            p 耐用
-            p 刀頭更換快速
+    .S2   
+        .container.row
+            .left
+                img.img-fluid(src="public/images/product6.png", alt="") 
+            .right 
+                h2 真豪洗冷氣清洗槽
+                p 革命性產品
+                p 完全解決溢水的困擾
+                p 組裝快速省去繁雜工時
+    .S3    
+        .container.row  
+            .left 
+                img.img-fluid(src="public/images/knife2.png", alt="")
+                img.logo2(src="public/images/LOGO2.png", alt="")
+            .right 
+                h2 真豪修邊刀
+                p 方便攜帶
+                p 好操作
+                p 耐用
+                p 刀頭更換快速
     footer 
         .container 
             .row 
